# precursor

./: .gitignore  1pattern  CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  architecture.puml  build.rs  cargo-up  hasher.sh  patterns
.github/workflows/: ci.yml  release.yml
ci/: sha256-releases  utils.sh
ci/docker/aarch64-unknown-linux-gnu/: build
ci/docker/i686-unknown-linux-gnu/: build
ci/docker/powerpc64-unknown-linux-gnu/: build
ci/docker/s390x-unknown-linux-gnu/: build
ci/docker/x86_64-unknown-linux-musl/: build
patterns/: cisco  definitions  fortinet  fortinet_notes.txt  ics  ics_bad  ips  links  new  non_match  suspicious  univ_of_munich
pkg/brew/: precursor-bin.rb
src/: main.rs
src/precursor/: mod.rs  tlsh.rs  util.rs
util/: pack2pcre2
