[package]
name = "precursor"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
clap = "4.4.6"
pcre2 = "0.2.5"
serde_json = "1.0.107"
tlsh2 = { version = "0.3.0", features = ["diff"] }
hex = "0.4.3"
lazy_static = "1.4.0"
base64 = "0.21.4"
rayon = "1.8.0"
dashmap = "5.5.3"
atomic-counter = "1.0.1"
prettytable-rs = "0.10.0"

[[bin]]
name = "precursor"
path = "src/main.rs"

[profile.release]
debug = false

[build-dependencies]
clap_mangen = "0.2.14"
