[package]
name = "precursor"
build = "build.rs"
version = "0.1.0"
authors = ["Matt Lehman <obsecurus@users.noreply.github.com>"]
homepage = "https://github.com/GreyNoise-Intelligence/precursor"
repository = "https://github.com/GreyNoise-Intelligence/precursor"
description = "A data analysis tool for text and binary tagging and filtering with similarity comparisons."
readme = "README.md"
keywords = ["binary", "tool", "analysis", "similarity", "hashing", "forensics"]
license = "MIT"
categories = ["command-line-utilities", "filesystem", "datascience"]

[dependencies]
xxhash-rust = { version = "0.8.0", features = ["xxh3", "const_xxh3"] }
clap = "4.4.6"
pcre2 = "0.2.5"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
tlsh2 = { version = "0.3.0", features = ["diff"] }
hex = "0.4.3"
lazy_static = "1.4.0"
base64 = "0.21.4"
rayon = "1.8.0"
dashmap = "5.5.3"
atomic-counter = "1.0.1"
sha2 = "0.10.8"
jaq-core = "0.10.0"
indicatif = "0.17.7"
fbhash = { git = "https://github.com/Obsecurus/fbhash.git", branch = "main" }

[[bin]]
name = "precursor"
path = "src/main.rs"

[profile.release]
debug = false

[build-dependencies]
clap_mangen = "0.2.14"
